--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'cn.mobai.zjt'
-    compileSdk 33
+    compileSdk 23
 
     defaultConfig {
         applicationId "cn.mobai.zjt"
         minSdk 21
-        targetSdk 33
+        targetSdk 23
         versionCode 1
         versionName "1.0"
 
@@ -29,5 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.squareup.okio:okio:1.12.0'
     compileOnly 'de.robv.android.xposed:api:82'
 }
