--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.藏建通插件"
-        tools:targetApi="31">
+        android:theme="@style/Base.Theme.藏建通插件">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- 应用为模块 -->
         <meta-data
             android:name="xposedmodule"
-            android:value="true" />
-
-        <!-- 版本信息 -->
+            android:value="true" /> <!-- 版本信息 -->
         <meta-data
             android:name="xposedminversion"
-            android:value="82" />
-
-        <!-- 模块描述 -->
+            android:value="82" /> <!-- 模块描述 -->
         <meta-data
             android:name="xposeddescription"
             android:value="藏建通模拟器全放开插件" />
