--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ plugins {
 
 android {
     namespace 'cn.mobai.zjt'
-    compileSdk 23
+    compileSdk 21
 
     defaultConfig {
         applicationId "cn.mobai.zjt"
-        minSdk 21
-        targetSdk 23
+        minSdk 8
+        //noinspection ExpiredTargetSdkVersion
+        targetSdk 21
         versionCode 1
         versionName "1.0"
 
@@ -22,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
